--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,26 @@
-- name: Build JAR
-  run: |
-    if [ -f backend/pom.xml ]; then
-      echo "Maven project detected in backend/"
-      cd backend && mvn clean package -DskipTests
-    elif [ -f backend/build.gradle ]; then
-      echo "Gradle project detected in backend/"
-      cd backend && gradle build -x test
-    else
-      echo "No build file found. Assuming pre-built JAR."
-      if [ ! -f app.jar ]; then
-        echo "Error: No app.jar found" >&2
-        exit 1
-      fi
-    fi
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.example</groupId>
+    <artifactId>my-app</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <dependencies>
+        <!-- Add dependencies here -->
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
