--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -28,6 +28,14 @@ jobs:
         run: |
           mkdir s3-files
           aws s3 cp s3://cca670-tickitdb/jar ./app/jar
+      - name: Create Dockerfile
+        run: |
+          cat <<EOF > Dockerfile
+          FROM openjdk:17-jdk-slim
+          WORKDIR /app
+          COPY ./app/jar /app/jar
+          CMD ["java", "-jar", "/app/jar/your-file.jar"]
+          EOF
       - name: Build Docker Image
         run: |
           docker build -t docker push abbysac/devops-qr-code-backend:latest
