--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,22 +22,18 @@ jobs:
           docker login -u abbysac -p ${{ secrets.DOCKEER_HUB_SECRET }}
           docker push abbysac/devops-qr-code-backend:latest
           docker push abbysac/devops-qr-code-frontend:latest
+     
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+
       - name: Create temporary directory
         run: mkdir -p ./app
       - name: Download jar files from S3
-        run: |
-          mkdir s3-files
-          aws s3 sync ./packages3.json s3://cca670-tickitdb/jar  
-        #./app/jar
-    #   - name: Create Dockerfile
-    #     run: |
-    #       cat <<EOF > Dockerfile
-    #       FROM openjdk:17-jdk-slim
-    #       WORKDIR /app
-    #       COPY ./app/jar /app/jar
-    #       CMD ["java", "-jar", "/app/jar/your-file.jar"]
-    #       EOF
-    #   - name: Build Docker Image
-    #     run: |
-    #       docker build -t docker push abbysac/devops-qr-code-backend:latest
-    #       docker push abbysac/devops-qr-code-frontend:latest 
+        run: aws s3 sync ./packages3.json s3://cca670-tickitdb/jar  
+            #./app/jar
+
+    
