--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,12 +23,12 @@ jobs:
           docker push abbysac/devops-qr-code-backend:latest
           docker push abbysac/devops-qr-code-frontend:latest
      
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: us-east-1
+    #   - name: Configure AWS Credentials
+    #     uses: aws-actions/configure-aws-credentials@v
+    #     with:
+    #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #         aws-region: us-east-1
 
       - name: Create temporary directory
         run: mkdir -p ./app
